исправленная проектная работа после автотеста

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </h2>
         <ul class="lots__card-list">
           <li class="lots__card-list-item">
-            <a href="" class="card-link">
+            <a href="#0" class="card-link">
               <article class="card card_type_film">
                 <div class="overlay"></div>
                 <h3 class="card__title">
@@ -103,7 +103,7 @@
       <section class="about" id="about">
         <div class="about__column logo__column">
           <div class="about__logo">
-            <img class="about__logo-image" src="/images/logo-white.svg" alt="логотип оно тебе надо">
+            <img class="about__logo-image" src="./images/logo-white.svg" alt="логотип оно тебе надо">
           </div>
         </div>
         <div class="about__column text__column">
