--- a/index.html
+++ b/index.html
@@ -11,28 +11,25 @@
   </head>
   <body>
     <header class="header">
-      <div class="header__menu">
-        <nav>
-          <ul class="header__links-list">
-            <li class="header__links-list-item header__links-list-item_no-bullit"><a class="header__link header__link_active">главная</a></li>
-            <li class="header__links-list-item"><a class="header__link" href="#lots">посмотреть лоты</a></li>
-            <li class="header__links-list-item"><a class="header__link" href="#about">об аукционе</a></li>
-          </ul>
-        </nav>
-      </div>
+      <nav class="header__menu">
+        <ul class="header__links-list">
+          <li class="header__links-list-item header__links-list-item_no-bullit"><a class="header__link header__link_active">главная</a></li>
+          <li class="header__links-list-item"><a class="header__link" href="#lots">посмотреть лоты</a></li>
+          <li class="header__links-list-item"><a class="header__link" href="#about">об аукционе</a></li>
+        </ul>
+      </nav>
       <div class="header__logo">
         <a>
           <img class="header__logo-image" src="./images/logo-black.svg" alt="логотип оно тебе надо">
         </a>
       </div>
-      <div class="address header__address">
+      <address class="address header__address">
         <a href="tel:+99995555555">+9 999 555 5555</a>
-        <br>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <address>наб. Принсенграхт 263-
-          <br>
-            265, Амстердам</address>
-      </div>
+        <p>наб. Принсенграхт 263-
+        <br>  
+            265, Амстердам</p>
+      </address>
     </header>
     <main>
       <section class="cover">
@@ -121,28 +118,25 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="address">
+      <address class="address">
         <a href="tel:+99995555555">+9 999 555 5555</a>
-        <br>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <address>наб. Принсенграхт 263-
-          <br>
-            265, Амстердам</address>
-      </div>
+        <p>наб. Принсенграхт 263-
+        <br>  
+            265, Амстердам</p>
+      </address>
       <nav class="menu">
         <ul class="footer__menu-list">
           <li class="footer__menu-list-item"><a class="footer__menu-link footer__menu-link_active" >главная</a></li>
           <li class="footer__menu-list-item"><a class="footer__menu-link" href="#lots">посмотреть лоты</a></li>
           <li class="footer__menu-list-item"><a class="footer__menu-link" href="#about">об аукционе</a></li>
         </ul>
-      
       </nav>
       <ul class="footer__social-list">
-        <li class="footer__social-list-item"><a href="" class="footer__social-link"><img class="footer__social-icon" src="/images/yt.svg" alt=""></a></li>
-        <li class="footer__social-list-item"><a href="" class="footer__social-link"><img class="footer__social-icon" src="/images/vk.svg" alt=""></a></li>
-        <li class="footer__social-list-item"><a href="" class="footer__social-link"><img class="footer__social-icon" src="/images/pinterest.svg" alt=""></a></li>
+        <li class="footer__social-list-item"><a href="" class="footer__social-link"><img class="footer__social-icon" src="./images/yt.svg" alt=""></a></li>
+        <li class="footer__social-list-item"><a href="" class="footer__social-link"><img class="footer__social-icon" src="./images/vk.svg" alt=""></a></li>
+        <li class="footer__social-list-item"><a href="" class="footer__social-link"><img class="footer__social-icon" src="./images/pinterest.svg" alt=""></a></li>
       </ul>
-      
     </footer>
   </body>
 </html>
